Fix DenormalDisabler::FlushDenormalFloatToZero() renaming.

NOPRESUBMIT=true
NOTREECHECKS=true
NOTRY=true
TBR=blink-reformat@chromium.org, lukasza@chromium.org
BUG=709976

Review-Url: https://codereview.chromium.org/2811623003
Cr-Commit-Position: refs/heads/master@{#463251}

Former-commit-id: 6c1e8e8ba974f4a2ac3ff3c0498c25410b2bfa19